Update android workflows for bte.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -186,6 +186,15 @@ android {
         debug {
             signingConfig signingConfigs.debug
         }
+        staging {
+            // Caution! In production, you need to generate your own keystore file.
+            // see https://facebook.github.io/react-native/docs/signed-apk-android.
+            // signingConfig signingConfigs.release
+            minifyEnabled enableProguardInReleaseBuilds
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+            matchingFallbacks = ['staging']
+        }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
@@ -193,6 +202,7 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
+            matchingFallbacks = ['release']
         }
     }
 
@@ -202,7 +212,7 @@ android {
             dimension "version"
         }
         bte {
-            applicationIdSuffix '.bte'
+            applicationId 'org.pathcheck.covidsafepathsBte'
             dimension "version"
         }
     }
