--- a/.github/workflows/publish-release-android-bte.yml
+++ b/.github/workflows/publish-release-android-bte.yml
@@ -3,33 +3,14 @@ name: Publish Release Candidates
 on:
   push:
     branches:
-      - bte
+      - task/mb-increment-version-code
     paths-ignore:
       - 'package.json'
       - 'CHANGELOG.md'
 
 jobs:
-  version_bump:
-    name: "Bump version"
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        ref: ${{ github.ref }}
-
-    - name: Bump version and push tag
-      uses: TriPSs/conventional-changelog-action@v2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        git-message: 'chore(release): {version}'
-        preset: 'angular'
-        tag-prefix: ''
-        output-file: 'CHANGELOG.md'
-
   deploy_android:
     runs-on: ubuntu-latest
-    needs: version_bump
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
