--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,11 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  */
 def enableHermes = project.ext.react.get("enableHermes", false)
 
+static def generateVersionCode() {
+    def commitCount = "git rev-list HEAD --count".execute().text.trim()
+    return commitCount.toInteger()
+}
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -152,7 +157,7 @@ android {
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
-        versionCode 25
+        versionCode generateVersionCode()
         versionName "1.0.8"
     }
     splits {
@@ -219,19 +224,6 @@ android {
         checkReleaseBuilds false
     }
 
-    // applicationVariants are e.g. debug, release
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            // For each separate APK per architecture, set a unique version code as described here:
-            // https://developer.android.com/studio/build/configure-apk-splits.html
-            def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-            def abi = output.getFilter(OutputFile.ABI)
-            if (abi != null) {  // null for the universal-debug, universal-release variants
-                output.versionCodeOverride =
-                        versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
-            }
-        }
-    }
 }
 
 dependencies {
