--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-document-picker": "github:rparet/react-native-document-picker",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-awesome-alerts": "1.3.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-local-resource": "^0.1.6",
     "react-native-permissions": "^2.0.10",
