--- a/.github/workflows/gissa.yml
+++ b/.github/workflows/gissa.yml
@@ -10,7 +10,7 @@ jobs:
             uses: docker://technosophos/slack-notify
             env:
               SLACK_WEBHOOK: ${{secrets.SLACK_WEBHOOK}}
-              SLACK_MESSAGE: "${{github.author}} fez o seguinte commit no repo ${{github.repository}}: ${{github.event.head_commit.message}}"
+              SLACK_MESSAGE: "${{github.actor}} fez o seguinte commit no repo ${{github.repository}}: ${{github.event.head_commit.message}}"
 
 
 
